# Quest

./: .clang-format  .clang-tidy  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a  cmake_install.cmake  codeviz.dot  compile_commands.json  output_file.txt  qc
examples/: main.qu  parsetest
resources/: bibliography  bnf.txt  fetch  refrences.md  slr_xlat
resources/book/: Copy of ERD_final_draft.drawio  DFA Example.drawio  a compiler  diagram(1).md
resources/language/: .bnf2  .ebnf  ast.md  quest.bnf  quest.ebnf  tokens.md
resources/language/diagram(1)/: index.md
src/: AST.c  io.c  lang.c  lexer.c  lexer_automata.c  list.c  main.c  make_lexer_DFA.c  parser.c  quest.c  tags  token.c  token_type.c
src/code_gen/: TTS.c  code_generator.c  operand.c  register.c  translation_rule.c  translations.c
src/config/: lexer_dfa.txt
src/include/: AST.h  io.h  lang.h  lexer.h  lexer_automata.h  lexer_automata_state_type.h  list.h  macros.h  parser.h  quest.h  token.h  token_type.h  tokens.h
src/include/code_gen/: TTS.h  code_generator.h  nasm_macros.h  operand.h  register.h  translation_rule.h  translations.h
src/include/lexer/: token.h  (+2 more)
src/lexer/: lexer.c  lexer_automata.c  token.c
src/parser/: action_table.c  bnf.c  goto_table.c  grammer.c  item_set.c  lr_item.c  lr_stack.c  non_terminal.c  parse_tree.c  parser.c  rule.c  slr.c  slr_xlat  slr_xlat.c  symbol.c  symbol_set.c
src/semantic_analizer/: AST.c  definitions.c  sdt.c  semantic_analyzer.c  semantic_rule.c
src/utils/: lexer_DFA.c  lexer_DFA.h
tests/: hello_64.asm
tests/assignment/: ass.qu  out  out.asm
tests/gcd/: .asm  gcd  gcd.qu  out  out.asm
tests/nasm_test/: hello
(+51 files in other folders)
